--- a/handcrafted-haven/package.json
+++ b/handcrafted-haven/package.json
@@ -14,7 +14,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
     "bcryptjs": "^3.0.3",
-    "next": "16.0.1",
+    "ci": "^2.3.0",
+    "next": "^16.0.8",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
@@ -26,7 +27,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.8",
     "prisma": "^4.15.0",
     "tailwindcss": "^4",
     "typescript": "^5"
