--- a/handcrafted-haven/package.json
+++ b/handcrafted-haven/package.json
@@ -10,6 +10,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.15.0",
